--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # site settings
-title: Forty
+title: Myblog
 subtitle: by HTML5 UP
-email: youremailaddress@gmail.com
+email: sorry917089@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
-baseurl: "/forty-jekyll-theme" # the subpath of your site, e.g. /blog
-url: # the base hostname & protocol for your site
+baseurl: "/Myblog/" # the subpath of your site, e.g. /blog
+url: https://madein98.github.io# the base hostname & protocol for your site
 author:
 street_address: 1234 Somewhere Road
 city: Nashville
