--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ subtitle: by HTML5 UP
 email: sorry917089@gmail.com
 description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
 baseurl: "/Myblog/" # the subpath of your site, e.g. /blog
-url: https://madein98.github.io# the base hostname & protocol for your site
+url: https://madein98.github.io/Myblog/# the base hostname & protocol for your site
 author:
 street_address: 1234 Somewhere Road
 city: Nashville
