--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Myblog
 subtitle: by HTML5 UP
 email: sorry917089@gmail.com
-description: A responsive site template designed by HTML5 Up<br /> and released under the Creative Commons.
+description: 안녕하세요. 게임 프로그래머를 목표로 하고 있는 정승원입니다.
 baseurl: "/Myblog/" # the subpath of your site, e.g. /blog
 url: https://madein98.github.io/Myblog/# the base hostname & protocol for your site
 author:
